change variables on base_on_nodes role

--- a/roles/base_on_nodes/vars/main.yaml
+++ b/roles/base_on_nodes/vars/main.yaml
@@ -1,17 +1,15 @@
 ---
 nodes_list:
-  - {ip: '194.5.206.100', name: 'master1.nazarbazi.ir'}
-  - {ip: '194.5.206.177', name: 'master2.nazarbazi.ir'}
-  - {ip: '194.5.206.191', name: 'worker1.nazarbazi.ir'}
-  - {ip: '194.5.206.146', name: 'worker2.nazarbazi.ir'}
-  - {ip: '194.5.206.32', name: 'loadbalancer.nazarbazi.ir'}
+  - {ip: 'NODE-1-IP', name: 'master1.nazarbazi.ir'}
+  - {ip: 'NODE-2-IP', name: 'master2.nazarbazi.ir'}
+  - {ip: 'NODE-3-IP', name: 'worker1.nazarbazi.ir'}
+  - {ip: 'NODE-4-IP', name: 'worker2.nazarbazi.ir'}
+  - {ip: 'NODE-5-IP', name: 'worker3.nazarbazi.ir'}
 
 master:
-  init_ip: 194.5.206.100
+  init_ip: <INITIAL_MASTER_IP>
 
 join_list:
-  - {ip: '194.5.206.191'}
-  - {ip: '194.5.206.146'}
+  - {ip: 'WORKER_IP'}
+  - {ip: 'WORKER_IP'}
 
-dev_ip:
-  ansible_facts.eth0.ipv4.address
