--- a/roles/base_on_nodes/tasks/main.yml
+++ b/roles/base_on_nodes/tasks/main.yml
@@ -6,12 +6,12 @@
 - name: Disable Selinux Shell
   shell: sed -i 's/^SELINUX=enforcing$/SELINUX=disabled/' /etc/selinux/config
   tags: [disable_selinux]
-#- name: Disable Firewalld
-#  service:
-#        name: firewalld
-#        state: stopped
-#        enabled: no
-#  tags: [disabled_firewalld]
+- name: Disable Firewalld
+  service:
+        name: firewalld
+        state: stopped
+        enabled: no
+  tags: [disabled_firewalld]
 - name: move my etc_hosts
   copy:
        src: etc_hosts
