--- a/roles/base_on_nodes/tasks/main.yml
+++ b/roles/base_on_nodes/tasks/main.yml
@@ -88,7 +88,13 @@
           backup: yes
   notify: Restart Docker
   tags: [daemon-json]
-
+- name: Create Docker-systemd-Directory
+  file:
+      path: /etc/systemd/system/docker.service.d
+      state: directory
+      owner: root
+      group: root
+  tags: [create-docker-serviced[
 - name: Install Kubernetes
   yum:
     name:
